# news_project

./: README.md  pyproject.toml
news_project/data/: df.py
