[tool.poetry]
name = "projectie1"
version = "0.1.0"
description = ""
authors = ["Andres Ferrer <andferrer6a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
ruff = "^0.1.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
